--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.11</title>
+<title>更多的合成 Crafting++ v1.11 - Minecraft 原版模组</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -377,10 +377,10 @@
 <li>食物装饰——41种植物、77种食物、79种头颅、21种头饰服饰、40种新春装饰、50种经典画作、64种纸片人、17种告示牌、100种称号，装点自己也装点自己的家。</li>
 </ul>
 <p style="display: none;">本模组即将完结，以后应该只会修复bug和优化内容，不会再有大的更新。如遇到Minecraft命令机制大改或新生物等内容，我还是会及时更新代码并支持新的内容。感谢大家一直以来的支持和帮助！</p>
-<p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/craftingpp/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
+<p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
-<p>更多版本请<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/">前往 github 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。本页面仅包含1.9及以上版本的内容。</p>
+<p>更多版本请<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/">前往 Gitee 页面查看</a>或<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/">前往 GitHub 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/CraftingPlusPlus">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。本页面仅包含1.9及以上版本的内容。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
 	<th>下载地址</th></tr></thead>
@@ -388,42 +388,48 @@
 	<tr>
 		<td rowspan="2">Java版 1.16.x</td>
 		<td>v1.11.1</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.11</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="3">Java版 1.15.2</td>
 		<td>v1.10.11</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.11.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.10.10</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.10.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.10.9</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.9.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td>Java版 1.14.3-1.14.4</td>
 		<td>v1.9.24</td>
-		<td><a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.24">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.24.zip">官方</a></td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.9/v1.9.24.zip">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.24">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.24.zip">其它</a></td>
 	</tr>
 </tbody></table>
 
 <p>模组支持英文、简体中文、繁体中文、<a href="https://www.mcbbs.net/thread-1004643-1-1.html"><del>梗体中文</del></a>。安装教程：<a href="https://www.bilibili.com/video/BV1sA411t7ML">https://www.bilibili.com/video/BV1sA411t7ML</a></p>
-<ul><li><strong>1.16 版本</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。</li>
+<ul><li><strong>1.16 版本</strong> 下载后解压缩。在生成世界前可以在世界预设中点击数据包，将<code>更多的合成数据包.zip</code>拖拽进打开的界面，并选择至右侧以启用。在主页面点击<code>选项->资源包</code>打开资源包选择界面，将<code>更多的合成资源包.zip</code>拖拽进打开的界面，选择至右侧以启用。注意服务器需要开启命令方块。</li>
 <li><strong>1.15 版本</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。</li>
 <li><strong>1.14 版本</strong> 下载后解压缩。生成的世界后，选中世界并点击<code>编辑->打开世界文件夹->打开datapacks文件夹</code>，将数据包放入，然后重新进入世界。在主页面点击<code>选项->资源包->打开资源包文件夹</code>，将<code>更多的合成资源包.zip</code>放入文件夹内，然后在资源包页面将其选择至右侧以启用。最后设置<code>选项->语言->强制使用Unicode字体：关</code>。</li></ul>
 
@@ -6248,22 +6254,22 @@
 	<td>缤纷菜蔬</td>
 </tr>
 <tr><td>-8</td>
-	<td>生缤纷菜蔬 冰糖葫芦 烤蔬菜串</td>
+	<td>生缤纷菜蔬 冰糖葫芦 烤蔬菜串 蜜枣粽子</td>
 </tr>
 <tr><td>-6</td>
 	<td>蘑菇煲 甜菜汤 蜜汁炖菜</td>
 </tr>
 <tr><td>-5</td>
-	<td>面包 烤马铃薯 烤胡萝卜 纸杯蛋糕 可颂 三明治 青团 樱饼 粽子</td>
+	<td>面包 烤马铃薯 烤胡萝卜 纸杯蛋糕 可颂 三明治 青团 樱饼 粽子 咸味粽子 碱水味粽子</td>
 </tr>
 <tr><td>-4</td>
 	<td>苹果 金苹果 附魔金苹果 紫颂果 水果 葡萄干</td>
 </tr>
 <tr><td>-3</td>
-	<td>南瓜派 胡萝卜 金胡萝卜 蛋糕卷</td>
+	<td>南瓜派 胡萝卜 金胡萝卜 蛋糕卷 蛋黄粽子</td>
 </tr>
 <tr><td>-2</td>
-	<td>西瓜片 曲奇 毒马铃薯 甜浆果 果酱</td>
+	<td>西瓜片 曲奇 毒马铃薯 甜浆果 果酱 甜味粽子</td>
 </tr>
 <tr><td>-1</td>
 	<td>干海带 甜菜根 马铃薯 饺子</td>
@@ -6278,7 +6284,7 @@
 	<td>蜘蛛眼 生羊肉 生兔肉 生鸡肉 生鳕鱼 生鲑鱼 煮鸡蛋 黄油 奶酪</td>
 </tr>
 <tr><td>+3</td>
-	<td>生牛肉 生猪排 肉松面包 焦糖布丁 甜甜圈 蜂蜜煎饼</td>
+	<td>生牛肉 生猪排 蜂蜜瓶 肉松面包 焦糖布丁 甜甜圈 蜂蜜煎饼 猪肉粽子</td>
 </tr>
 <tr><td>+4</td>
 	<td>腐肉</td>
@@ -6536,7 +6542,8 @@
 </tr>
 
 <tr><th><strong id="冰糖葫芦">冰糖葫芦</strong><br />
-		<a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger_half" title="9"></a></th>
+	<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
+	<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
 	<td>糖+<a href="#山楂">山楂</a>+木棍</td>
 	<td><span class="ui cm" title="合成器">
 		<a class="sugar" title="糖"></a>
@@ -6609,16 +6616,33 @@
 	<td><code>cpp:croissant</code> <span class="version">1.10 起</span></td>
 </tr>
 
-<tr><th><strong id="焦糖布丁">焦糖布丁</strong><br />
-		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
-		<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
-	<td>牛奶+糖+鸡蛋+蜂蜜瓶</td>
+<tr><th rowspan="2"><strong id="焦糖布丁">焦糖布丁</strong><br />
+	<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
+	<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
+<td>牛奶+糖+鸡蛋+蜂蜜瓶 <span class="oldversion">1.10-1.11.1</span></td>
+<td><span class="ui cm" title="合成器">
+	<a class="milk_bucket" title="牛奶"></a>
+	<a class="sugar" title="糖"></a>
+	<a class="egg" title="鸡蛋"></a>
+	<a class="honey_bottle" title="蜂蜜瓶"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="ci caramel_pudding" title="焦糖布丁"></a>
+	<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+</span></td>
+<td rowspan="2"><code>cpp:caramel_pudding</code></td>
+</tr>
+<tr>
+	<td>牛奶+糖+鸡蛋+蜂蜜瓶+碗 <span class="version">1.11.2 起</span></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="milk_bucket" title="牛奶"></a>
 		<a class="sugar" title="糖"></a>
 		<a class="egg" title="鸡蛋"></a>
 		<a class="honey_bottle" title="蜂蜜瓶"></a>
-		<a class="empty"></a>
+		<a class="bowl" totle="碗"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
@@ -6626,7 +6650,6 @@
 		<a class="ci caramel_pudding" title="焦糖布丁"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><code>cpp:caramel_pudding</code> <span class="version">1.10 起</span></td>
 </tr>
 
 <tr><th><strong id="甜甜圈">甜甜圈</strong><br />
@@ -6748,10 +6771,10 @@
 	<td><code>cpp:green_doughnut</code> <span class="version">1.10 起</span></td>
 </tr>
 
-<tr><th><strong id="蜂蜜煎饼">蜂蜜煎饼</strong><br />
+<tr><th rowspan="2"><strong id="蜂蜜煎饼">蜂蜜煎饼</strong><br />
 		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
 		<a class="ui icons18 speed"></a><span class="lore">速度 00:30</span></th>
-	<td>蜂蜜瓶+鸡蛋+小麦+<a href="#黄油">黄油</a>+<a href="#蓝莓">蓝莓</a></td>
+	<td>蜂蜜瓶+鸡蛋+小麦+<a href="#黄油">黄油</a>+<a href="#蓝莓">蓝莓</a> <span class="oldversion">1.10-1.11.1</span></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="honey_bottle" title="蜂蜜瓶"></a>
 		<a class="egg" title="鸡蛋"></a>
@@ -6765,7 +6788,23 @@
 		<a class="ci honey_pancake" title="蜂蜜煎饼"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td><code>cpp:honey_pancake</code> <span class="version">1.10 起</span></td>
+	<td rowspan="2"><code>cpp:honey_pancake</code></td>
+</tr>
+<tr>
+<td>蜂蜜瓶+鸡蛋+小麦+<a href="#黄油">黄油</a>+<a href="#蓝莓">蓝莓</a>+碗 <span class="version">1.11.2 起</span></td>
+<td><span class="ui cm" title="合成器">
+	<a class="honey_bottle" title="蜂蜜瓶"></a>
+	<a class="egg" title="鸡蛋"></a>
+	<a class="wheat" title="小麦"></a>
+	<a href="#黄油" class="ci butter" title="黄油"></a>
+	<a href="#蓝莓" class="ci blueberry" title="蓝莓"></a>
+	<a class="bowl" totle="碗"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="empty"></a>
+	<a class="ci honey_pancake" title="蜂蜜煎饼"></a>
+	<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
+</span></td>
 </tr>
 
 <tr><th><strong id="煮鸡蛋">煮鸡蛋</strong><br />
@@ -7192,7 +7231,7 @@
 	</span></td>
 	<td><span class="version">1.10 起</span><br /><code>cpp:sakura_mochi</code></td>
 </tr>
-<tr><th rowspan="2"><strong id="粽子">粽子</strong><br />
+<tr><th><strong id="粽子">粽子</strong><br />
 		<a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger" title="5"></a><a class="ui icons18 hunger_half" title="5"></a></th>
 	<td><a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a></td>
 	<td><span class="ui cm" title="合成器">
@@ -7208,17 +7247,17 @@
 		<a class="ci zongzi" title="粽子"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
-	<td rowspan="2"><span class="version">1.11起</span><br />
-		<a class="ui ci zongzi" title="粽子"></a> 原味 <code>cpp:zongzi</code><br />
-		<a class="ui ci zongzi_boiled_egg" title="粽子"></a> 蛋黄馅 <code>cpp:zongzi.boiled_egg</code><br />
-		<a class="ui ci zongzi_chinese_date" title="粽子"></a> 蜜枣馅 <code>cpp:zongzi.chinese_date</code><br />
-		<a class="ui ci zongzi_cooked_porkchop" title="粽子"></a> 猪肉馅 <code>cpp:zongzi.cooked_porkchop</code><br />
-		<a class="ui ci zongzi_salt" title="粽子"></a> 咸味 <code>cpp:zongzi.salt</code><br />
-		<a class="ui ci zongzi_soda_water" title="粽子"></a> 碱水味 <code>cpp:zongzi.soda_water</code><br />
-		<a class="ui ci zongzi_honey_bottle" title="粽子"></a> 甜味 <code>cpp:zongzi.honey_bottle</code></td>
+	<td><span class="version">1.11起</span><br />
+	<code>cpp:zongzi</code></td>
 </tr>
-<tr><td>
-	<a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+<a href="#煮鸡蛋">煮鸡蛋</a><br />
+<tr><th><strong>蛋黄粽子</strong><br />
+	<strong>蜜枣粽子</strong><br />
+	<strong>猪肉粽子</strong><br />
+	<strong>咸味粽子</strong><br />
+	<strong>碱水粽子</strong><br />
+	<strong>甜味粽子</strong><br />
+	<a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger" title="9"></a><a class="ui icons18 hunger_half" title="9"></a></th>
+	<td><a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+<a href="#煮鸡蛋">煮鸡蛋</a><br />
 	<a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+<a href="#枣">枣</a><br />
 	<a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+熟猪排<br />
 	<a href="#芦苇草">芦苇草</a>+<a href="#稻谷">稻谷</a>+<a href="#盐">盐</a><br />
@@ -7237,6 +7276,13 @@
 		<a class="ci zongzi_chinese_date" title="粽子"></a>
 		<span class="shapeless" title="此配方是无形的，材料可以以任何排列方式放置在合成格内。"></span>
 	</span></td>
+	<td><span class="version">1.11起</span><br />
+		<a class="ui ci zongzi_boiled_egg" title="粽子"></a> 蛋黄馅 <code>cpp:zongzi.boiled_egg</code><br />
+		<a class="ui ci zongzi_chinese_date" title="粽子"></a> 蜜枣馅 <code>cpp:zongzi.chinese_date</code><br />
+		<a class="ui ci zongzi_cooked_porkchop" title="粽子"></a> 猪肉馅 <code>cpp:zongzi.cooked_porkchop</code><br />
+		<a class="ui ci zongzi_salt" title="粽子"></a> 咸味 <code>cpp:zongzi.salt</code><br />
+		<a class="ui ci zongzi_soda_water" title="粽子"></a> 碱水味 <code>cpp:zongzi.soda_water</code><br />
+		<a class="ui ci zongzi_honey_bottle" title="粽子"></a> 甜味 <code>cpp:zongzi.honey_bottle</code></td>
 </tr>
 <tr><th><strong id="三明治">三明治</strong><br />
 		<a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><a class="ui icons18 hunger" title="10"></a><br />
@@ -7277,11 +7323,11 @@
 </tr>
 <tr><th><strong id="冷饮">冷饮</strong><br />
 		<a class="ui icons18 hunger" title="6"></a><a class="ui icons18 hunger" title="6"></a><a class="ui icons18 hunger" title="6"></a></th>
-	<td>水瓶+<a href="#水果">水果</a>	<td>
+	<td>蜂蜜瓶(1.9为水瓶)+<a href="#水果">水果</a>(1.10 起允许苹果)<td>
 		<span class="ui aiom" title="多功能一体机">
-		<a class="ci high_temperature_plugin" title="高温"></a>
-		<a class="ci low_pressure" title="低压"></a>
-		<a class="water_bottle" title="水瓶"></a>
+		<a class="ci high_pressure" title="高压"></a>
+		<a class="ci low_temperature" title="低温"></a>
+		<a class="honey_bottle" title="蜂蜜瓶"></a>
 		<a href="#水果" class="ci banana" title="水果"></a>
 		<a class="ci cold_drink" title="冷饮"></a>
 		<a class="empty"></a>
@@ -10028,17 +10074,18 @@
 
 <footer>
 <p>
-	<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/" title="更多的合成官网" class="ui ci portable_crafting_machine"></a>
+	<a href="http://home.ustc.edu.cn/~zsxqq/CraftingPlusPlus/" title="更多的合成官网" class="ui ci portable_crafting_machine"></a>
 	<a href="http://www.mcbbs.net/thread-696861-1-1.html"><img src="items/mcbbs.png" alt="Mcbbs" title="Minecraft(我的世界)中文论坛"></a>
 	<a href="https://www.mcmod.cn/class/1297.html"><img src="items/mcmod.png" alt="Mcbbs" title="MC百科"></a>
-	<a href="https://github.com/ruhuasiyu/CraftingPlusPlus"><img src="items/github.png" alt="GitHub" title="github" /></a>
+	<a href="https://github.com/ruhuasiyu/CraftingPlusPlus"><img src="items/github.png" alt="GitHub" title="GitHub" /></a>
+	<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus"><img src="https://gitee.com/static/images/logo-black.svg" alt="Gitee" title="Gitee" /></a>
 	<a href="https://afdian.net/@ruhuasiyu/"><img src="items/afdian.png" alt="爱发电" /></a>
 	<a href="./items/wechatcode.png"><img src="items/wechat.png" alt="微信赞赏码" /></a>
 	<a href="./items/alipaycode.png"><img src="items/alipay.png" alt="支付宝收钱码" /></a>
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2020-06-23</p>
+<p>最后更新 2020-07-21</p>
 </footer>
 
 </article>
