--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-hans">
 <head>
 <meta charset="utf-8" />
-<title>更多的合成 Crafting++ v1.11 - Minecraft 原版模组</title>
+<title>更多的合成 Crafting++ v1.11.1 - Minecraft 原版模组</title>
 <meta name='author' content='ruhuasiyu@mcbbs' />
 <meta name='keywords' content='minecraft, 原版模组, vanilla mod, datapacks, Crafting++' />
 <meta name='description' content='Minecraft 原版模组 更多的合成' />
@@ -470,8 +470,8 @@
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">一米八微笑 明月庄主 Rhythm萱 唯一丶为伊 月下贱影 LIXIAOGANG SPGoding 陌余Oucher uuu2011 爱发电用户_AU9c 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 折君 空白 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx </span></p>
-<!--一米八微笑 250 明月庄主 250 Rhythm萱 128 月下贱影 100 LIXIAOGANG 96 SPGoding 88 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
+<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
+<!--一米八微笑 250 明月庄主 250 Rhythm萱 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
@@ -1355,7 +1355,7 @@
 	<td><code>cpp:cat_head.white</code></td>
 	<td>白猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。<br />矿物辞典 <code>dict:['cat_head']</code></td>
 </tr>
-<tr><th><strong id="Jellie 猫头">Jellie 猫头</strong></th>
+<tr><th><strong id="Jellie_猫头">Jellie 猫头</strong></th>
 	<td><a class="ui ci cat_head_jellie"></a></td>
 	<td><code>cpp:cat_head.jellie</code></td>
 	<td>Jellie 猫被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。<br />矿物辞典 <code>dict:['cat_head']</code></td>
@@ -1395,7 +1395,7 @@
 	<td><code>cpp:rabbit_head.salt</code></td>
 	<td>椒黄色兔被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。<br />矿物辞典 <code>dict:['rabbit_head']</code></td>
 </tr>
-<tr><th><strong id="Toast 兔头">Toast 兔头</strong></th>
+<tr><th><strong id="Toast_兔头">Toast 兔头</strong></th>
 	<td><a class="ui ci rabbit_head_toast"></a></td>
 	<td><code>cpp:rabbit_head.toast</code></td>
 	<td>Toast 兔被玩家杀死时，有<code>2.5%+抢夺等级×1%</code>的几率掉落。<br />矿物辞典 <code>dict:['rabbit_head']</code></td>
@@ -1521,9 +1521,9 @@
 <p>可以将两种不同的矿石混合烧炼并提高产出，不同的搭配拥有不同的倍率，倍率在模组首次加载时被确定，需要玩家测量参数以确定最佳组合。倍率为1.0~4.0倍，其中红石的基准数量为5，青金石的基准数量为6。支持煤矿石/铁矿石/金矿石(下界金矿石)/红石矿石/青金石矿石/绿宝石矿石/钻石矿石/下界石英矿石。</p>
 
 <table>
-<thead><tr><th colspan="2">输入</th><th colspan="2">输出</th><th>经验</th><th>耗时</th></tr></thead><tbody>
-<tr><td colspan="2">任意两种矿石</td>
-	<td colspan="2">1.0~4.0倍对应矿物</td>
+<thead><tr><th>输入</th><th>输出</th><th>经验</th><th>耗时</th></tr></thead><tbody>
+<tr><td>任意两种矿石</td>
+	<td>1.0~4.0倍对应矿物</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -1597,7 +1597,7 @@
 </tr>
 <tr><td><a class="ui glass_bottle"></a><a class="ui sand"></a></td>
 	<td>玻璃瓶+沙子/红沙</td>
-	<td><a href="#盐瓶"class="ui ci bottle_of_salt"></a></td>
+	<td><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
 	<td><a href="#盐瓶">盐瓶</a></td>
 	<td>4</td>
 	<td>10</td>
@@ -3181,6 +3181,7 @@
 	<td></td>
 	<td></td>
 </tr>
+<tr>
 	<td><a class="ui water_bucket" title="水桶"></a></td>
 	<td><a class="ui grass_block" title="草方块"></a></td>
 	<td><a class="ui mycelium" title="菌丝"></a></td>
@@ -5660,7 +5661,6 @@
 	</span></td></tr>
 </tbody></table>
 <p>自动将16米内物品吸引过来。右击切换开关。若放置放物品展示框，可吸引附近16米的物品到所在处。</p>
-</tbody></table>
 
 <h3 id="报时器">报时器 <code>cpp:time_checker</code></h3>
 <p>放置于物品展示框后可报时。右击消耗4点经验将时间增加1200刻(60秒)。</p>
@@ -5695,7 +5695,7 @@
 		<a href="#附魔钻石" class="ci enchanted_diamond" title="附魔钻石"></a>
 		<a class="empty"></a>
 		<a class="ci time_conditioner" title="时间调节器"></a>
-	</span></td><td></td></tr>
+	</span></td></tr>
 </tbody></table>
 
 <h3 id="世界之源">世界之源 <code>cpp:origin_of_the_world</code></h3>
@@ -5775,7 +5775,7 @@
 <h3 id="无尽桶">无尽桶 <code>cpp:infinite_bucket</code></h3>
 <p><span class="oldversion">1.10</span> 右键收集水和熔岩并存储起来。Shift右键放置水和熔岩，对着空气Shift右键切换放置何种液体。</p>
 <table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
-<tr><td><a href="#附魔铁锭">附魔铁锭</a</td>
+<tr><td><a href="#附魔铁锭">附魔铁锭</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="empty"></a>
 		<a class="empty"></a>
@@ -6642,7 +6642,7 @@
 		<a class="sugar" title="糖"></a>
 		<a class="egg" title="鸡蛋"></a>
 		<a class="honey_bottle" title="蜂蜜瓶"></a>
-		<a class="bowl" totle="碗"></a>
+		<a class="bowl" title="碗"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
@@ -6798,7 +6798,7 @@
 	<a class="wheat" title="小麦"></a>
 	<a href="#黄油" class="ci butter" title="黄油"></a>
 	<a href="#蓝莓" class="ci blueberry" title="蓝莓"></a>
-	<a class="bowl" totle="碗"></a>
+	<a class="bowl" title="碗"></a>
 	<a class="empty"></a>
 	<a class="empty"></a>
 	<a class="empty"></a>
@@ -9530,12 +9530,12 @@
 	盾牌(The Command Power 标志)<br />
 	盾牌(Command Block Logic 标志)<br />
 	盾牌(Nuclear Fusion 标志)</th>
-	<td>盾牌+<a href="#哔哩哔哩标志">哔哩哔哩标志</a><br />
-	盾牌+<a href="#github标志">github标志</a><br />
-	盾牌+<a href="#mcmod标志">mcmod标志</a><br />
-	盾牌+<a href="#The Command Power 标志">The Command Power 标志</a><br />
-	盾牌+<a href="#Command Block Logic 标志">Command Block Logic 标志</a><br />
-	盾牌+<a href="#Nuclear Fusion 标志">Nuclear Fusion 标志</a></td>
+	<td>盾牌+<a href="#标志">哔哩哔哩标志</a><br />
+	盾牌+<a href="#标志">github标志</a><br />
+	盾牌+<a href="#标志">mcmod标志</a><br />
+	盾牌+<a href="#标志">The Command Power 标志</a><br />
+	盾牌+<a href="#标志">Command Block Logic 标志</a><br />
+	盾牌+<a href="#标志">Nuclear Fusion 标志</a></td>
 	<td><span class="ui cm" title="合成器">
 		<a class="shield" title="盾牌"></a>
 		<a href="#哔哩哔哩标志" class="ci bilibili_logo" title="哔哩哔哩标志"></a>
@@ -9696,7 +9696,7 @@
 
 <h3 id="竖纹方块">竖纹方块</h3>
 <p>部分方块双台阶材质修改为竖纹。</p>
-<p><img style="height:160px" src="items/screenshots/vertical_blocks.png" /></p>
+<p><img style="height:160px" src="items/screenshots/vertical_blocks.png" alt="竖纹方块" /></p>
 
 
 <!--==================================================================-->
