--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-hans">
+<html lang="zh-Hans-CN">
 <head>
 <meta charset="utf-8" />
 <title>更多的合成 Crafting++ v1.11.1 - Minecraft 原版模组</title>
@@ -10074,11 +10074,11 @@
 
 <footer>
 <p>
-	<a href="http://home.ustc.edu.cn/~zsxqq/CraftingPlusPlus/" title="更多的合成官网" class="ui ci portable_crafting_machine"></a>
+	<a href="https://zhangshenxing.gitee.io/craftingplusplus/" title="更多的合成" class="ui ci portable_crafting_machine"></a>
 	<a href="http://www.mcbbs.net/thread-696861-1-1.html"><img src="items/mcbbs.png" alt="Mcbbs" title="Minecraft(我的世界)中文论坛"></a>
 	<a href="https://www.mcmod.cn/class/1297.html"><img src="items/mcmod.png" alt="Mcbbs" title="MC百科"></a>
 	<a href="https://github.com/ruhuasiyu/CraftingPlusPlus"><img src="items/github.png" alt="GitHub" title="GitHub" /></a>
-	<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus"><img src="https://gitee.com/static/images/logo-black.svg" alt="Gitee" title="Gitee" /></a>
+	<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus"><img src="https://gitee.com/static/images/logo-en.svg" alt="Gitee" title="Gitee" /></a>
 	<a href="https://afdian.net/@ruhuasiyu/"><img src="items/afdian.png" alt="爱发电" /></a>
 	<a href="./items/wechatcode.png"><img src="items/wechat.png" alt="微信赞赏码" /></a>
 	<a href="./items/alipaycode.png"><img src="items/alipay.png" alt="支付宝收钱码" /></a>
