更新赞助名单

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 	<li><a href="#空书架"><span class="ci" style="background-position: -96px -0px;"></span> 空书架</a></li>
 </ul><ul>
 	<li><a href="#空白插件"><span class="ci" style="background-position: -112px -0px;"></span> 空白插件</a> </li>
-	<li><a href="#低温插件"><span class="ci" style="background-position: -128px -0px;"></span> 低温插件</a> </li>
+	<li><a href="#低温插件"><span class="ci" style="background-position: -32px -16px;"></span> 低温插件</a> </li>
 	<li><a href="#低压插件"><span class="ci" style="background-position: -0px -16px;"></span> 低压插件</a> </li>
 	<li><a href="#高温插件"><span class="ci" style="background-position: -16px -16px;"></span> 高温插件</a> </li>
-	<li><a href="#高压插件"><span class="ci" style="background-position: -32px -16px;"></span> 高压插件</a></li>
+	<li><a href="#高压插件"><span class="ci" style="background-position: -128px -0px;"></span> 高压插件</a></li>
 	<li><a href="#圆石插件"><span class="ci" style="background-position: -48px -16px;"></span> 圆石插件</a> </li>
 	<li><a href="#石头插件"><span class="ci" style="background-position: -64px -16px;"></span> 石头插件</a> </li>
 	<li><a href="#黑石插件"><span class="ci" style="background-position: -96px -1200px;"></span> 黑石插件</a></li>
@@ -380,21 +380,21 @@
 <p>如有任何意见建议，欢迎在<a href="https://jq.qq.com/?_wv=1027&k=5tPH7m7">QQ群 455270603</a>(入群答案发酵桶)反馈、<a href="http://www.mcbbs.net/thread-696861-1-1.html">在论坛回复</a>或<a href="http://www.mcbbs.net/home.php?mod=spacecp&ac=pm&touid=975525">私信我</a>、<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/issues/new">发起issue</a>、<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/issues/new">发起issue</a>，请在反馈时提供游戏版本和模组版本。</p>
 
 <h3 id="下载与安装">📦 下载与安装</h3>
-<p>更多版本请<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/">前往 Gitee 页面查看</a>或<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/">前往 GitHub 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/CraftingPlusPlus">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。本页面仅包含1.9及以上版本的内容。</p>
+<p>更多版本请<a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions">前往 Gitee 页面查看</a>或<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/">前往 GitHub 页面查看</a>。其它链接：<a href="http://home.ustc.edu.cn/~zsxqq/CraftingPlusPlus">官方主页</a>、<a href="http://www.mcbbs.net/thread-696861-1-1.html">MCBBS 页</a>、<a href="https://www.mcmod.cn/class/1297.html">MC 百科页</a>。本页面仅包含1.9及以上版本的内容。</p>
 <table><thead><tr><th>支持的minecraft版本</th>
 	<th>Crafting++版本</th>
 	<th>下载地址</th></tr></thead>
 <tbody>
 	<tr>
-		<td rowspan="2">Java版 1.16.x</td>
+		<td rowspan="2">Java版 1.16-1.16.1</td>
 		<td>v1.11.1</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.11/v1.11.1.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.1.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.1.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.11</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.11/v1.11.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/tree/master/versions/1.11/v1.11.zip">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.zip">其它</a></td>
 	</tr>
@@ -402,19 +402,19 @@
 	<tr>
 		<td rowspan="3">Java版 1.15.2</td>
 		<td>v1.10.11</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.11.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.11.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.11">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.11.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.10.10</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.10.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.10.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.10">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.10.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>v1.10.9</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.10/v1.10.9.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.10/v1.10.9.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.10.9">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.10.9.zip">其它</a></td>
 	</tr>
@@ -422,7 +422,7 @@
 	<tr>
 		<td>Java版 1.14.3-1.14.4</td>
 		<td>v1.9.24</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/tree/master/versions/1.9/v1.9.24.zip">Gitee</a> |
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/raw/master/versions/1.9/v1.9.24.zip">Gitee</a> |
 			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.9.24">GitHub</a> |
 			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.9.24.zip">其它</a></td>
 	</tr>
@@ -470,8 +470,8 @@
 <p><span style="font-weight:bold;">数据包设计</span>：ruhuasiyu</p>
 <p><span style="font-weight:bold;">资源包设计</span>：ruhuasiyu RubberTree XeKr 折君</p>
 <p><span style="font-weight:bold;">平台支持</span>：<a href="https://www.mcbbs.net/">Minecraft(我的世界)中文论坛</a> <a href="https://www.mcmod.cn/">MC百科</a> </p>
-<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
-<!--一米八微笑 250 明月庄主 250 Rhythm萱 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
+<p><span style="font-weight:bold;">赞助名单</span>：<span style="color:blue;">月下贱影 一米八微笑 明月庄主 SPGoding Rhythm萱 唯一丶为伊 8Index LIXIAOGANG 陌余Oucher uuu2011 爱发电用户_AU9c 甘小蔗 空白 火星浮云 这是彩虹糖呢 古镇天 支持国产mod 倪采臣 zzzz 大吃货 折君 Hao_Tian22 Appleeeee 爱发电用户_JCmn 落天望月 爱发电用户_4eyN switefaster 猫君 chyx TUCAOEVER</span></p>
+<!--一米八微笑 250 明月庄主 250 Rhythm萱8Index 128 月下贱影 300 LIXIAOGANG 96 SPGoding 136 墨鱼 86 uuu2011 66 火星浮云 64 匿名1 64 匿名2 50 这是彩虹糖呢 48 倪采臣大吃货 32 ustc_zzzz 32 折君 31  苹果果 落天望月 chyx switefaster 猫君-->
 <p>设计过程中亦参考了<a href="http://teamcofh.com/">热力膨胀</a>、<a href="https://botaniamod.net/">植物魔法</a>、<a href="http://www.abyssalcraft.com/">深渊国度</a>、<a href="https://minecraft.curseforge.com/projects/pams-harvestcraft">潘马斯农场</a>、<a href="https://www.mcmod.cn/class/250.html">无中生有</a>，<a href="https://www.mcmod.cn/class/353.html">等价交换</a>、<a href="https://minecraft.curseforge.com/projects/saltymod">盐</a>等模组以及<a href="https://www.bilibili.com/">Bilibili</a>与<a href="youtube.com">Youtube</a>一些视频，<a href="http://www.mcbbs.net/group-546-1.html">CBL</a>、<a href="http://www.mcbbs.net/group-1009-1.html">TCP</a>、<a href="http://www.mcbbs.net/group-1474-1.html">CBV</a>、<a href="http://www.mcbbs.net/group-1478-1.html">MAG</a>等小组以及天狼星black、MC先生、pineapple_、贰逼、ECS、pca、玄素、乙烯_中国、⊙v⊙、HerobrineXia、白天、苹果果、SorrowRain、Amber、匠魂、Gingerbread、森林蝙蝠、mcer、Stark、yap、Lakejason等玩家亦对此模组有贡献。</p>
 <p>感谢以上所有玩家，特别感谢对我们给予赞助的玩家！</p>
 
